further improvements for DRI handling
